    it's widget-set-dependent. Unhardcode the path to gparted.
  * Remove espresso/backend/, none of which is used any more except by the
    netcloner and noui frontends which are both broken at the moment anyway.
    The frontend/backend division is now between espresso.frontend and
    espresso.components, mediated by debconffilter.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 24 Feb 2006 15:14:15 +0000

espresso (0.99.17) dapper; urgency=low

  * Add X-Ubuntu-Gettext-Domain=espresso to espresso-gtkui.desktop (although
    it's useless until we get internationalisation set up properly).
  * Open /var/log/installer/espresso with line-buffering so that error
    messages appear there more quickly during testing.
  * Fix debconffilter to handle SET and SUBST commands whose values consist
    of more than one word.
  * Add a "Ready to install" summary page. (It doesn't contain all the
    necessary information yet, and it should run before partitioning is
    committed rather than after, but that will be easy to fix later.)
  * In the GTK frontend, display an error dialog and exit if running as
    non-root.
  * Restore some bits of autoconfiscation that bzr helped me lose.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 24 Feb 2006 14:44:28 +0000

espresso (0.99.16) dapper; urgency=low

  * Explicitly decode strings returned by debconf as UTF-8, since apparently
    we get confused when running with the KDE frontend otherwise (which
    presumably does something funky with Python's default encoding).
  * Rename Changelog to Changelog.Guadalinex to avoid confusion. Ubuntu
    changes (i.e. everything since renaming to espresso) go here.
  * Add e-map widget, cut-and-pasted from evolution via gnome-system-tools
    (ugh).
  * Basic autoconfiscation for the above.
  * Add initial Python bindings for e-map.
  * Add an espresso.tz module for various bits of timezone handling.
  * First cut at timezone map widget, based on a translation of code in